syntax = "proto3";
package remotejobs;

service RemoteJobs {
    rpc StartJob(StartRequest) returns (StartResponse);
    rpc StopJob(StopRequest) returns (StopResponse);
    rpc QueryStatus(StatusRequest) returns (StatusResponse);
    rpc StreamOutput(OutputRequest) returns (stream OutputResponse);
}

message StartRequest {
  string cmd = 1;
  repeated string args = 2;
  string dir = 3;
  map<string, string> envs = 4;
}

message StartResponse {
  bytes job_id = 1;
}

message StopRequest {
  bytes job_id = 1;
}

message StopResponse{}

message StatusRequest {
  bytes job_id = 1;
}

message StatusResponse {
  message RunningType{}
  message ExitedType {
      int32 code = 1;
  }
  message KilledType {
      int32 signal = 1;
  }
  oneof job_status {
    RunningType running = 1;
    ExitedType exited = 2;
    KilledType killed = 3;
  }
}

message OutputRequest {
  bytes job_id = 1;
  enum OutputType {
    STDOUT = 0;
    STDERR = 1;
    ALL = 2;
  }
  OutputType output = 2;
}

message OutputResponse {
  bytes data = 1;
}
